[project]
name = "qrz-mcp"
version = "0.2.1"
description = "MCP server for QRZ.com — callsign lookup, DXCC resolution, logbook queries"
readme = "README.md"
license = {text = "GPL-3.0-or-later"}
authors = [{name = "Greg Beam, KI7MT"}]
requires-python = ">=3.10"
dependencies = [
    "adif-mcp>=0.6.2",
    "fastmcp>=3.0",
]
keywords = [
    "amateur-radio", "ham-radio", "qrz", "callsign", "dxcc",
    "logbook", "mcp", "model-context-protocol",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Communications :: Ham Radio",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://qso-graph.io/"
Repository = "https://github.com/qso-graph/qrz-mcp"
Issues = "https://github.com/qso-graph/qrz-mcp/issues"

[project.scripts]
qrz-mcp = "qrz_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/qrz_mcp"]
